# bigbraincraft

./: .gitignore  agentPlan.md  docker-compose.yml  quick  repomix-output.txt  settings.js
content/llms/: llms-full.txt  llms.txt
profiles/defaults/: _default.json
services/openai_agent/: pyproject.toml
src/agent/: agent.js  coder.js  history.js
src/models/: prompter.js
